# WinToast

./: CMakeLists.txt
include/: wintoastlib.h
src/: wintoastlib.cpp
